crates/biome_js_analyze/tests/specs/nursery/noPlaywrightElementHandle/invalid/frame.js
const element = await frame.$('#element');

